@@ -1,46 +1,32 @@
-
-
+package tests;
 import org.junit.*;
+
+import sport.*;
+import participant.*;
+
 import static org.junit.Assert.assertEquals;
-import java.util.List;
-import java.util.ArrayList;
-import java.util.Comparator;
-import java.util.Arrays;
+
+// compiler : javac --module-path /usr/share/openjfx/lib/ --add-modules javafx.controls -d bin/ -cp jar/junit-jupiter-api-5.3.2.jar:jar/junit-jupiter-engine-5.3.2.jar:jar/junit-platform-console-standalone-1.3.2.jar src/sport/*.java src/participant/*.java src/autre/*.java src/comparateur/*.java ./tests/TestEpreuve.java 
+// executer :  java --module-path /usr/share/openjfx/lib/ --add-modules javafx.controls -javaagent:jar/jacocoagent.jar=destfile=jacoco.exec -cp bin/src/sport:bin/src/tests:bin/src/participant:jar/junit-jupiter-api-5.3.2.jar:jar/junit-jupiter-engine-5.3.2.jar:jar/junit-platform-console-standalone-1.3.2.jar org.junit.platform.console.ConsoleLauncher --scan-class-path --class-path bin
+
 
 
 public class TestEpreuve {
     Sport natation = new Natation("Natation", "Eau");
-    Pays france = new Pays("France");
-    Pays angleterre = new Pays("Angleterre");
-    Pays espagne = new Pays("Espagne");
-
-    Equipe equipeFrance = new Equipe("France");
-    Epreuve epreuveNatation = new Epreuve("100m brasse hommes", "hommes", "individuel", natation);
-    Athlete marchand = new Athlete("Marchand", "Léon", "M", 10, 20, 40, france);
-    Athlete peaty = new Athlete("Peaty", "Adam", "M", 15, 22, 35, angleterre);
+    Epreuve e = new Epreuve("Nom", "Cat",natation,1);
+    
 
     @Test 
     public void testGetNom(){
-        assertEquals(epreuveNatation.getNom(), "100m brasse hommes");
+        assertEquals(e.getNom(), "Nom");
+    }
+    @Test
+    public void testGetCat(){
+        assertEquals(e.getCategorie(), "Cat");
     }
     @Test 
-    public void testGetStyle(){
-        assertEquals(epreuveNatation.getStyle(),"individuel");
-    }
-    @Test 
-    public void testGetParticipants(){
-        assertEquals(epreuveNatation.getCategorie(), "hommes");
-    }
-    @Test 
-    public void testClassement(){
-        Comparator<Athlete> comp1 = new CompareMedailleOr();
-        france.setNbOr(3);
-        angleterre.setNbOr(5);
-        espagne.setNbOr(2);
-        epreuveNatation.ajoutParticipants(marchand);
-        epreuveNatation.ajoutParticipants(peaty);
-        List<Pays> listeP = Arrays.asList(france, angleterre);
-        assertEquals(epreuveNatation.classement(comp1, Tri.PAYS), listeP);
-
+    public void testGetNum(){
+        Integer num = 1;
+        assertEquals(e.getNum(),num);
     }
 }
